// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchHit should render SearchHit successfully 1`] = `
<body>
  <div>
    <div
      class="container"
    >
      <div
        class="rowSpaceBetween"
      >
        <div
          class="titleRow"
        >
          <a
            href="Search hit title href"
          >
            <h2
              class="title"
            >
              Search hit title
            </h2>
          </a>
          <div>
            Search hit status tag
          </div>
        </div>
      </div>
      Search hit content
      <p
        class="description"
      >
        Search hit description
      </p>
      Search hit labels
    </div>
  </div>
</body>
`;

exports[`SearchHit should render SearchHit with empty title successfully 1`] = `
<body>
  <div>
    <div
      class="container"
    >
      <div
        class="rowSpaceBetween"
      >
        <div
          class="titleRow"
        >
          <a
            href=""
          >
            <h2
              class="title"
            >
              Uten navn
            </h2>
          </a>
        </div>
      </div>
    </div>
  </div>
</body>
`;
